--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "homepage": "https://github.com/ZxBing0066/mockiss#readme",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "before-publish": "npm run build",
+    "publish:patch": "npm run before-publish && npm version patch && npm publish",
+    "publish:minor": "npm run before-publish && npm version minor && npm publish",
+    "publish:major": "npm run before-publish && npm version major && npm publish"
   },
   "author": "ZxBing0066",
   "license": "MIT",
