--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "test": "npm run build && node ./lib/index.js -t ./tests/mock -p 3030 & npx serve ./tests",
     "before-publish": "npm run build",
     "publish:patch": "npm run before-publish && npm version patch && npm publish",
     "publish:minor": "npm run before-publish && npm version minor && npm publish",
@@ -36,10 +37,11 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
     "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.9",
     "@types/lodash": "^4.14.165",
     "@types/mockjs": "^1.0.3",
+    "axios": "^0.21.0",
     "typescript": "^4.1.3"
   }
 }
